# restaurant

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  others.md  spec-mid.md  spec-min.md  spec-org.md
application/: Cargo.toml
application/src/: api.rs  http_server.rs  item.rs  main.rs  table_orders.rs
client/: Cargo.toml
client/src/: main.rs
node-client/: client.js  package.json
server/: Cargo.toml
server/src/: main.rs
server/src/clock/: mod.rs  utc_clock.rs
src/: bin_heap.rs  binary_heap.rs  clock.rs  ep_common.rs  ep_keygen.rs  ep_signing.rs  eth_addr.rs  eth_network.rs  eth_signer.rs  http_server.rs  in_memory_order_mgr.rs  item.rs  lib.rs  logger.rs  main.rs  order_mgr.rs  orders.rs  shared_types.rs  table_orders.rs  types.rs  util.rs
src/clock/: arbitrary_clock.rs
tests/: integration_test.rs  test.rs  webhook_reciver.rs
tests/gg18_client/: console_notifier.rs  http_poster.rs  mod.rs
