[package]
name = "restaurant"
version = "0.1.0"
authors = ["parumu"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json"] }
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
log = "0.4"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }