[package]
name = "client"
version = "0.1.0"
authors = ["parumu"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
rand = "0.7"
application = { path = "../application" }
simple_logger = "1.11"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }